--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.4.0",
-    "prettier-eslint": "^8.8.1",
+    "prettier-eslint": "^8.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
