--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "massive": "^4.7.2",
+    "nodemailer": "^4.6.4",
+    "random-key": "^0.3.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
