--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.3.2",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
