--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "cypress": "^2.1.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "prettier-eslint": "^8.8.1"
   },
