--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "stripe": "^5.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -41,6 +41,5 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "prettier-eslint": "^8.8.1"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
